# jcdl2024

./: .gitignore  README.md  googleLLM.py  init.py  keywords_regexs.py  main.ipynb  main.py  pyproject.toml  requirements.txt  utils.py  vectorDB.py
helper/: annotate_pdf.py  basics.py  extract_datasets.py  goauth.py  googleLLM.py  retreive_passages.py  sentence_splitter.py  vectorDB.py
src/llm_dme/: __init__.py  extract_datasets.py  keywords_regexs.py  retreive_passages.py  sentence_splitter.py
src/rag_dme/: __init__.py  basics.py  extract_datasets.py  goauth.py  googleLLM.py  keywords_regexs.py  retreive_passages.py  sentence_splitter.py  vectorDB.py
