[tool.poetry]
name = "jcdl2024"
version = "0.1.0"
description = ""
authors = ["Priyangshu Datta <84124979+priyangshu-datta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "<2.0.0"
nltk = "^3.8.1"
sentence-transformers = "^3.0.1"
pydash = "^8.0.1"
google-ai-generativelanguage = "^0.6.7"
google-auth-oauthlib = "^1.2.1"
python-dotenv = "^1.0.1"
chromadb = "^0.5.4"
openpyxl = "^3.1.5"
loguru = "^0.7.2"
streamlit = "^1.36.0"
grobid-client-python = "^0.0.8"
beautifulsoup4 = "^4.12.3"
pymupdf = "^1.24.7"
lxml = "^5.2.2"
pysqlite3-binary = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
