[project]
name = "jcdl2024"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "PyMuPDF==1.24.7",
    "beautifulsoup4==4.12.3",
    "google-ai-generativelanguage==0.6.7",
    "google-auth-oauthlib==1.2.1",
    "grobid-client-python==0.0.8",
    "loguru==0.7.2",
    "lxml==5.2.2",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pydash==8.0.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.0.1",
    "polars>=1.3.0",
    "rich>=13.7.1",
    "ipywidgets>=8.1.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.1",
    "rich>=13.7.1",
    "xlsxwriter>=3.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm-dme"]
